# Hoive

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  hmm.rs  hoive.db  hoive_games.db  hoive_games.db-shm  hoive_games.db-wal  test.db
backups/: pmoore
benches/: benchmark1.rs  benchmark2.rs  benchmark3.rs
client/: Cargo.toml
client/src/: comms.rs  echo.rs  echoer.rs  htmlserv.rs  lib.rs  local.rs  main.rs  models.rs  online.rs  ui.rs  websock.rs
client/src/game/: board.rs  comps.rs  specials.rs
client/src/htmlserv/: comms.rs  play.rs  setup.rs
client/src/online/: play.rs  setup.rs
client/src/ui/: local.rs  online.rs  play.rs  setup.rs
client/src/websock/: local_store.rs
common/: Cargo.toml
common/src/: models.rs
hoive/: Cargo.toml
hoive/benches/: benchmark3.backup  coordback.backup
hoive/src/: draw.rs  game.rs  lib.rs  local_ui.rs  main.rs  pmoore.rs  websocket_pmoore.rs
hoive/src/game/: actions.rs  animals.rs  ask.rs  board.rs  comps.rs  history.rs  movestatus.rs  specials.rs
hoive/src/maths/: coord.rs  funcs.rs  morphops.rs
hoive/tests/: bee.rs  beetle.rs  cube.rs  drawing.rs  grasshopper.rs  hecs.rs  histories.rs  ladybird.rs  mosquito.rs  pillbug.rs  spider.rs  spiral.rs
hoive/tests/common/: basic.rs  emulate.rs  games.rs  mod.rs
hoive/tests/snapshots/: badsnapshot_7.csv  snapshot_10.csv  snapshot_11.csv  snapshot_12.csv  snapshot_14.csv  snapshot_15.csv  snapshot_16.csv  snapshot_17.csv  snapshot_18.csv  snapshot_20.csv  snapshot_21.csv  snapshot_22.csv  snapshot_23.csv  snapshot_24.csv  snapshot_7.csv  snapshot_8.csv  snapshot_9.csv  snapshot_descriptions.txt
migrations/2022-08-23-082113_create_db/: up.sql
migrations/2022-09-01-055334_create_posts/: up.sql
migrations/2022-09-08-070713_create_db/: up.sql
misc/: local_ui.rs
reference/tests/snapshots/: snapshot_13.csv  snapshot_15.csv  snapshot_19.csv  snapshot_5neighbours.csv  snapshot_descriptions.txt
saved_games/: test.csv  testy.csv
server/: .env  Cargo.toml  hoive_games.db  hoive_games.db-shm  hoive_games.db-wal
server/migrations/2022-09-08-070713_create_db/: up.sql
server/src/: api.rs  chat_server.rs  chat_session.rs  db.rs  game_server.rs  game_session.rs  lib.rs  main.rs  models.rs  myactor.rs  schema.rs  session.rs  websocket_pmoore.rs
server/static/: index.html
server/tests/: api  api.rs  db.rs
server/tests/common/: mod.rs  testfns.rs
src/: api.rs  coord.rs  db.rs  draw.rs  game.rs  gameshow_host.rs  hex_coord.rs  lib.rs  local_pmoore.rs  main.rs  maths.rs  models.rs  morphops.rs  pmoore.rs  render.rs  schema.rs
src/db/: models.rs
src/game/: animals.rs  board.rs  comps.rs  history.rs  movestatus.rs  specials.rs
src/hex_coord/: HECS.rs
src/maths/: coord.rs  coord2.rs  funcs.rs  morphops.rs
static/: index.html
static/css/: style.css
tests/: basic.rs  bee.rs  beetle.rs  benchmarks.rs  cube.rs  drawing.rs  duodecimal.rs  game_snapshots.rs  grasshopper.rs  hecs.rs  histories.rs  hoive.rs  ladybird.rs  morphology.rs  morphy.rs  mosquito.rs  pillbug.rs  readyboards.rs  renderer.rs  spider.rs  spiral.rs
tests/common/: basic.rs  games.rs  mod.rs
