[package]
name = "hoive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Gameplay
hex-spiral ="0.1.0" # supports converting to and from hex spiral coords
rand = "0.8.5"  # For randomising which player goes first

# Diesel and actix-web
actix-web = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "2.0.0", features = ["sqlite", "r2d2"] }
dotenvy = "0.15"
uuid = { version = "1.1.2", features = ["serde", "v4"] }

# Benchmarking
[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark3"
harness = false