[workspace]
members =["hoive", "client", "server"]

[workspace.package]
version = "0.1.0"
authors = ["cooscoos"]
edition = "2021"

[workspace.dependencies]

# Gameplay
hoive = {path = "hoive"} # the main game logic
hex-spiral ="0.1.0" # supports converting to and from hex spiral coords
rand = "0.8.5"  # For randomising which player goes first

# Diesel and actix-web (required by server)
actix="0.13.0"
actix-web = "4"
actix-rt = "2.7.0"
actix-files = "0.6.2"
actix-session = {version="0.7.1", features=["cookie-session"]}
serde = {version = "1.0.144", features=["derive"]}
serde_json = "1.0.85"
diesel = { version = "2.0.0", features = ["sqlite", "r2d2"] }
dotenvy = "0.15"
uuid = { version = "1.1.2", features = ["serde", "v4"] }


# client
server = {path = "server"} # access to structs used by the server
client = {path = "client"}
reqwest = {version = "0.11.11", features =["blocking", "json", "cookies"]}
tokio = {version = "1.21.0", features = ["full"]}
futures = "0.3.24"

# other stuff
rustrict = "0.5.0"