[package]
name = "client"
version.workspace = true
authors.workspace = true
edition.workspace = true


[dependencies]
hoive = {workspace = true}
server = {workspace = true}

reqwest = {workspace = true}
tokio = {workspace = true}

serde = {workspace = true}
serde_json = {workspace = true}
uuid = {workspace = true}
rand = {workspace = true}

hex-spiral = {workspace = true}

