[package]
name = "common"
version.workspace = true
author.workspace = true
edition.workspace = true

[dependencies]
hoive = {workspace = true}
reqwest = {workspace = true}
tokio = {workspace = true}

serde = {workspace = true}
serde_json = {workspace = true}
uuid = {workspace = true}

hex-spiral = {workspace = true}