[package]
name = "hoive"
version.workspace = true
author.workspace = true
edition.workspace = true

[dependencies]
hex-spiral = {workspace = true}
serde = {workspace = true}
rand = {workspace = true}


# Benchmarking
[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark3"
harness = false

[features]
debug = []
