[package]
name = "hoive"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
hex-spiral = {workspace = true}
serde = {workspace = true}

# Benchmarking
#[dev-dependencies]
#criterion = "0.3"

#[[bench]]
#name = "benchmark3"
#harness = false

# For some extra features used for debugging
[features]
debug = []