[package]
name = "server"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]

# Gameplay
hoive = {workspace = true}
hex-spiral = {workspace = true}
rand = {workspace = true}

actix={workspace = true}
actix-web = {workspace = true}
actix-web-actors = {workspace = true}
actix-rt = {workspace = true}
actix-files = {workspace = true}
actix-session = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
diesel = {workspace = true}
dotenvy = {workspace = true}
uuid = {workspace = true}

# other stuff
rustrict = {workspace = true}

# for testing
bytes = {workspace = true}


# for envent logging
env_logger = "0.9"
log = "0.4"

# for tests
awc = "3"
futures-util = { version = "0.3.17", default-features = false, features = ["std", "sink"] }
tokio-stream = "0.1.8"
tokio = {workspace = true}